<resources>
    <string name="app_name">Geonotes</string>
    <string name="verfügbare_provider">Verfügbare Provider</string>
    <string name="lokalisierung_starten">Lokalisierung Starten</string>
    <string name="lokalisierung_gestartet">Lokalisierung Gestartet</string>
    <string name="standort_anzeigen">Standort Anzeigen</string>
    <string name="geodaten_empfpangen">Geodaten empfangen</string>
    <string name="placeholder">Placeholder</string>
    <string name="notiz">Notiz</string>
    <string name="notiz_speichern">Notiz Speichern</string>
    <string name="thema">Thema</string>
    <string name="aktuelles_projekt_prefix">Aktuelles Projekt:\u0020</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_item_foot">Zu Fuß (9 sec/10 m)</string>
    <string name="title_item_bicycle">Rad (4 sec/25 m)</string>
    <string name="title_item_car">PKW (4 sec/50 m)</string>
    <string name="title_item_car_fast">PKW fern (4 sec/100 m)</string>
    <string name="noMoving">Stillstand (1 min/1 m)</string>
    <string-array name="dialog_items">
        <item>Erstes Projekt</item>
        <item>Zweites Projekt</item>
        <item>Drittes Projekt</item>
    </string-array>
    <string-array name="standort_Anzeige_Auswahl">
        <item>NoteMapActivity</item>
        <item>WebViewActivity</item>
    </string-array>
    <string-array name="auswahlliste">
        <item>passiv</item>
        <item>gps</item>
        <item>network</item>
    </string-array>
</resources>
