<menu xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_notiz_Loeschen"
        android:title="Notiz Löschen"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_projekt_bearbeiten"
        android:title="Projektname bearbeiten"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_projekt_auswaehlen"
        android:title="Projektname auswählen"
        android:icon="@android:drawable/ic_menu_set_as"
        app:showAsAction="always" />

    <item android:id="@+id/menu_projekt_versenden"
        android:title="Projekt versenden"
        android:icon="@android:drawable/ic_menu_send"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_in_googlemap_oeffnen"
        android:title="In Google Map anzeigen"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_osm_oeffnen"
        android:title="In Webview anzeigen"
        android:icon="@android:drawable/ic_menu_directions"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/noMoving"
                    android:id="@+id/item_nichtBewegen" />
                <item android:title="@string/title_item_foot"
                    android:id="@+id/item_foot"
                    android:checked="true"/>
                <item android:title="@string/title_item_bicycle"
                    android:id="@+id/item_bicycle" />
                <item android:title="@string/title_item_car"
                    android:id="@+id/item_car"/>
                <item android:title="@string/title_item_car_fast"
                    android:id="@+id/item_car_fast"/>
            </group>
        </menu>
    </item>
</menu>